# chatserver

./: CMakeLists.txt  README.md
etc/: mysql.cnf
include/: chatserver.h  chatservice.h  msg.h
include/dbPool/: Connection.h  ConnectionPool.h  public.h
include/model/: friendmodel.h  group.hpp  groupmodel.h  groupuser.h  offlinemessagemodel.h  user.hpp  usermodel.h
include/net/: TcpServer.h
include/redis/: redis.hpp
src/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  mian.cpp
src/dbPool/: Connection.cpp  ConnectionPool.cpp
src/model/: friendmoel.cpp  groupmodel.cpp  offlinemessagemodel.cpp  usermodel.cpp
src/net/: Channel.cc  EPollPoller.cc  TcpConnection.cc  TcpServer.cc  TimerQueue.cc
